projet_gl/src/test/deca/syntax/invalid/listDeclVar/incorrectNullLiteral.deca
// Description:
//    invalid test parser for null literal.
//
// Resultats:
//    ligne 13 : no viable alternative at input '}'.
//
// Historique:
//    cree le 12/01/2024

{
    null;
    null
}